--- a/portfolio.html
+++ b/portfolio.html
@@ -237,67 +237,81 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="footer_left">
-          <div class="contact_box">
-            <div class="logo">
-              <h2>
-                <a href="index.html"> <span class="txt">Web</span>Studio </a>
-              </h2>
-            </div>
-            <div>
-              <address class="footer_contact">
-                <ul class="items">
-                  <li class="item address">
-                    m.Warszawa, Aleje Jerozilimskie 21
-                  </li>
-                  <li class="item">
-                    <a class="link" href="mailto:info@example.com">
-                      info@example.com
-                    </a>
-                  </li>
-                  <li class="item">
-                    <a class="link" href="tel:+48111111111">+48 111 111 111</a>
-                  </li>
-                </ul>
-              </address>
-            </div>
+      <div class="container footer-left">
+        <!-- <div class="footer-left"> -->
+        <div class="contact-box">
+          <div class="logo">
+            <h2>
+              <a href="index.html"> <span class="txt">Web</span>Studio </a>
+            </h2>
           </div>
-          <!-- </div> -->
-          <div class="social_card_footer">
-            <h4 class="social_card_footer_title">DOŁĄCZ DO NAS</h4>
-            <ul class="social_card_footer_list">
-              <li class="social_card__footer_list_element">
-                <a class="social_card_footer_list_element_icon" href="#">
-                  <svg width="20" height="20" viewBox="0 0 20 20">
-                    <use xlink:href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social_card__footer_list_element">
-                <a class="social_card_footer_list_element_icon" href="#">
-                  <svg width="20" height="20" viewBox="0 0 20 20">
-                    <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social_card__footer_list_element">
-                <a class="social_card_footer_list_element_icon" href="#">
-                  <svg class="icon" width="20" height="20" viewBox="0 0 20 20">
-                    <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social_card__footer_list_element">
-                <a class="social_card_footer_list_element_icon" href="#">
-                  <svg width="20" height="20" viewBox="0 0 20 20">
-                    <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+          <div>
+            <address class="footer-contact">
+              <ul class="items">
+                <li class="item address">
+                  m.Warszawa, Aleje Jerozilimskie 21
+                </li>
+                <li class="item">
+                  <a class="link" href="mailto:info@example.com">
+                    info@devstudio.com
+                  </a>
+                </li>
+                <li class="item">
+                  <a class="link" href="tel:+48111111111">+48 111 111 111</a>
+                </li>
+              </ul>
+            </address>
           </div>
         </div>
+        <!-- social card-->
+        <div class="social-card-footer">
+          <h4 class="social-card-footer-title">DOŁĄCZ DO NAS</h4>
+          <ul class="social-card-footer-list">
+            <li class="social-card-footer-list-element">
+              <a class="social-card-footer-list-element-icon" href="#">
+                <svg width="20" height="20" viewBox="0 0 20 20">
+                  <use xlink:href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-card-footer-list-element">
+              <a class="social-card-footer-list-element-icon" href="#">
+                <svg width="20" height="20" viewBox="0 0 20 20">
+                  <use xlink:href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-card-footer-list-element">
+              <a class="social-card-footer-list-element-icon" href="#">
+                <svg class="icon" width="20" height="20" viewBox="0 0 20 20">
+                  <use xlink:href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-card-footer-list-element">
+              <a class="social-card-footer-list-element-icon" href="#">
+                <svg width="20" height="20" viewBox="0 0 20 20">
+                  <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- newsletter -->
+        <div class="subscribe-to-the-newsletter">
+          <h4 class="subscribe-to-the-newsletter-title"> Zapisz się do newslettera</h4>
+          <label class="subscribe-to-the-newsletter-label">
+            <input type="email" name="email" placeholder="E-mail" class="subscribe-to-the-newsletter-label-email" />
+            <button type="button" class="subscribe-to-the-newsletter-label-save">
+              Zapisz się
+              <svg width="24" height="24" viewBox="0 0 24 24">
+                <use xlink:href="./images/icons.svg#icon-icon-send">
+                </use>
+              </svg>
+            </button>
+          </label>
+        </div>
+        <!-- </div> -->
       </div>
     </footer>
   </body>
