--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
   <main>
     <section class="slider">
       <div class="container">
-        <div class="header">
-          <h1 class="title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          <button type="button" class="button" data-modal-open>
+        <div class="slider_header">
+          <h1 class="slider_header_title">
+            EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+          </h1>
+          <button type="button" class="slider_header_button" data-modal-open>
             Zamów usługe
           </button>
         </div>
