--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         <h4 class="subscribe-to-the-newsletter-title"> Zapisz się do newslettera</h4>
         <label class="subscribe-to-the-newsletter-label">
           <input type="email" name="email" placeholder="E-mail" class="subscribe-to-the-newsletter-label-email" />
-          <button type="button" class="subscribe-to-the-newsletter-label-save">
+          <button type="submit" class="subscribe-to-the-newsletter-label-save">
             Zapisz się
             <svg width="24" height="24" viewBox="0 0 24 24">
               <use xlink:href="./images/icons.svg#icon-icon-send">
@@ -448,7 +448,7 @@
           </button>
         </label>
       </div>
-      <!-- </div> -->
+      <!-- </div> zakmnięcie do <div class="footer-left">   -->
     </div>
   </footer>
   <div class="modal_container is_hidden" data-modal>
