--- a/index.html
+++ b/index.html
@@ -437,28 +437,42 @@
       <!-- newsletter -->
       <div class="subscribe-to-the-newsletter">
         <h4 class="subscribe-to-the-newsletter-title"> Zapisz się do newslettera</h4>
-        <label class="subscribe-to-the-newsletter-label">
-          <input type="email" name="email" placeholder="E-mail" class="subscribe-to-the-newsletter-label-email" />
-          <button type="submit" class="subscribe-to-the-newsletter-label-save">
-            Zapisz się
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <use xlink:href="./images/icons.svg#icon-icon-send">
-              </use>
-            </svg>
-          </button>
-        </label>
+        <!-- istnieją dwie metody do form POST oraz GET przy POST jeśli nie będziemy mieli zdefiniowanego backend serwera to nie będzie wiadomo co ma się stać po naciśnięciu wyślij -->
+        <!-- możemy tutaj ustawić również  -->
+        <!-- novalidate - ten formularz nie będzie wówczas walidowany  -->
+        <!-- autocomplete="off" przeglądarka nie będzie podpowiadała nam jaką wartość możemy wstawić np email który stosowaliśmy u siebie  -->
+        <form name="newsletter-form" method="get">
+          <label class="subscribe-to-the-newsletter-label">
+            <input type="email" name="email-newsletter" placeholder="E-mail"
+              class="subscribe-to-the-newsletter-label-email" />
+            <button type="submit" class="subscribe-to-the-newsletter-label-save">
+              Zapisz się
+              <svg width="24" height="24" viewBox="0 0 24 24">
+                <use xlink:href="./images/icons.svg#icon-icon-send">
+                </use>
+              </svg>
+            </button>
+          </label>
+        </form>
       </div>
       <!-- </div> zakmnięcie do <div class="footer-left">   -->
     </div>
   </footer>
-  <div class="modal_container is_hidden" data-modal>
+  <!-- <div class="modal_container is_hidden" data-modal>
     <div class="modal_space">
       <div class="modal">
-        <button class="close-btn" type="button" data-modal-close>X</button>
+        <button class="close-btn" type="button" data-modal-close>x</button>
       </div>
     </div>
+  </div> -->
+
+  <!-- modal bez zmiany script  -->
+  <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop-modal">
+      <button type="button" class="backdrop-modal-close-btn" data-modal-close>x</button>
+    </div>
   </div>
-  <script src="./js/modal.js"></script>
+  <script src="./js/modal1.js"></script>
 </body>
 
 </html>
