--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <!-- istnieją dwie metody do form POST oraz GET przy POST jeśli nie będziemy mieli zdefiniowanego backend serwera to nie będzie wiadomo co ma się stać po naciśnięciu wyślij -->
         <!-- możemy tutaj ustawić również  -->
         <!-- novalidate - ten formularz nie będzie wówczas walidowany  -->
-        <!-- autocomplete="off" przeglądarka nie będzie podpowiadała nam jaką wartość możemy wstawić np email który stosowaliśmy u siebie  -->
+        <!-- autocomplete="off" przeglądarka nie będzie podpowiadała nam jaką wartość możemy wstawić np email który stosowaliśmy u siebie , zazwyczaj jednak nie ustawia się tego-->
         <form name="newsletter-form" method="get">
           <label class="subscribe-to-the-newsletter-label">
             <input type="email" name="email-newsletter" placeholder="E-mail"
