--- a/index.html
+++ b/index.html
@@ -469,57 +469,75 @@
   <!-- modal bez zmiany script  -->
   <div class="backdrop is_hidden" data-modal>
     <div class="backdrop-modal">
-      <button type="button" class="backdrop-modal-close-btn" data-modal-close>x</button>
+      <div class="backdrop-modal-close-btn">
+        <svg width="18" height="18" viewBox="0 0 18 18" class="backdrop-modal-close-btn-icon" data-modal-close>
+          <use xlink:href="./images/icons.svg#icon-close-black-18dp-2-1">
+          </use>
+        </svg>
+      </div>
+
       <div class="backdrop-modal-order">
-        <form name="order-user-form" method="get">
-
-          <lable for="order-user-full-name" class="backdrop-modal-order-lable1">
-            <p>Imie</p>
-            <svg width="18" height="18" viewBox="0 0 18 18">
-              <use xlink:href="./images/icons.svg#icon-person-black-18dp">
-              </use>
-            </svg>
-
-            <input type="txt" name="order-user-full-name" id="order-user-full-name"
-              class="backdrop-modal-order-lable1-name" />
-          </lable>
-
-
-          <lable for="order-user-phone" class="backdrop-modal-order-lable2">
-            <p>Telefon</p>
-
-            <svg width="18" height="18" viewBox="0 0 18 18">
-              <use xlink:href="./images/icons.svg#icon-phone-black-18dp">
-              </use>
-            </svg>
-            <input type="phone" name="order-user-phone" id="order-user-phone"
-              class="backdrop-modal-order-lable2-phone" />
-
-          </lable>
-
-
-          <lable for="order-user-email" class="backdrop-modal-order-lable3">
-
-            <p>E-mail</p>
-            <svg width="18" height="18" viewBox="0 0 18 18" class="svg-name">
-              <use xlink:href="./images/icons.svg#icon-email-black-18dp">
-              </use>
-            </svg>
-            <input type="email" name="order-user-email" id="order-user-email"
-              class="backdrop-modal-order-lable3-email" />
-
-          </lable>
-
-          <lable for="order-user-comment" class="backdrop-modal-order-lable4">
-            <p>Komentarz</p>
-
-            <textarea type="textarea" name="order-user-comment" id="order-user-comment" placeholder="Wprowadź tekst"
-              class="backdrop-modal-order-lable4-comment"></textarea>
-          </lable>
-          <!-- <button type="submit" class="order-form-button">
-            Wyślij
-          </button>  -->
+        <div class="backdrop-modal-order-title">
+          Zostaw swoje dane w formularzu poniżej
+        </div>
+        <!-- FORM -->
+        <!-- <form action="get"> -->
+        <form>
+          <ul class="backdrop-modal-order-box">
+            <li class="backdrop-modal-order-box-items">
+              <label for="order-user-full-name">Imię</label>
+              <input class="input-box" type="text" name="order-user-full-name" id="order-user-full-name">
+              <svg class="order-icon" width="18" height="18" viewBox="0 0 18 18">
+                <use xlink:href="./images/icons.svg#icon-person-black-18dp">
+                </use>
+              </svg>
+            </li>
+            <li class="backdrop-modal-order-box-items">
+              <label for="order-user-phone">Telefon</label>
+              <input class="input-box" type="tel" name="order-user-phone" id="order-user-phone">
+              <svg class="order-icon" width="18" height="18" viewBox="0 0 18 18">
+                <use xlink:href="./images/icons.svg#icon-phone-black-18dp">
+                </use>
+              </svg>
+            </li>
+            <li class="backdrop-modal-order-box-items">
+              <label for="order-user-email">E-mail</label>
+              <input class="input-box" type="email" name="order-user-email" id="order-user-email">
+              <svg class="order-icon" width="18" height="18" viewBox="0 0 18 18">
+                <use xlink:href="./images/icons.svg#icon-email-black-18dp">
+                </use>
+              </svg>
+            </li>
+            <li class="backdrop-modal-order-box-items">
+              <label for="order-user-comment">Komentarz</label>
+              <textarea type="textarea" name="order-user-comment" id="order-user-comment"
+                placeholder="Wprowadź tekst"></textarea>
+            </li>
+          </ul>
         </form>
+
+
+
+
+
+
+
+        <!-- 
+
+          <lable for="order-user-statement" class="backdrop-modal-order-lable5-statement">
+            <input type="checkbox" name="order-user-statement" value="order-user-statement" />
+            <span>Oświadczam iż akceptuję
+              <span>
+                <a href="#">Regulamin</a>
+              </span>
+              i
+              <span>
+                <a href="#">Politykę Prywatności</a>
+              </span>
+            </span>
+          </lable> -->
+
+
       </div>
     </div>
   </div>
