--- a/index.html
+++ b/index.html
@@ -458,6 +458,8 @@
       <!-- </div> zakmnięcie do <div class="footer-left">   -->
     </div>
   </footer>
+  <!-- modal ze zmianą script -->
+  
   <!-- <div class="modal_container is_hidden" data-modal>
     <div class="modal_space">
       <div class="modal">
@@ -467,7 +469,7 @@
   </div> -->
 
   <!-- modal bez zmiany script  -->
-  <div class="backdrop is_hidden" data-modal>
+  <div class="backdrop is-hidden" data-modal>
     <div class="backdrop-modal">
       <div class="backdrop-modal-close-btn">
         <svg width="18" height="18" viewBox="0 0 18 18" class="backdrop-modal-close-btn-icon" data-modal-close>
