--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       </div>
       <!-- newsletter -->
       <div class="subscribe-to-the-newsletter">
-        <h4 class="subscribe-to-the-newsletter-title"> Zapisz się do newslettera</h4>
+        <div class="subscribe-to-the-newsletter-title"> Zapisz się do newslettera</div>
         <!-- istnieją dwie metody do form POST oraz GET przy POST jeśli nie będziemy mieli zdefiniowanego backend serwera to nie będzie wiadomo co ma się stać po naciśnięciu wyślij -->
         <!-- możemy tutaj ustawić również  -->
         <!-- novalidate - ten formularz nie będzie wówczas walidowany  -->
@@ -459,7 +459,7 @@
     </div>
   </footer>
   <!-- modal ze zmianą script -->
-  
+
   <!-- <div class="modal_container is_hidden" data-modal>
     <div class="modal_space">
       <div class="modal">
@@ -512,8 +512,7 @@
             </li>
             <li class="backdrop-modal-order-box-items">
               <label for="order-user-comment">Komentarz</label>
-              <textarea type="textarea" name="order-user-comment" id="order-user-comment"
-                placeholder="Wprowadź tekst"></textarea>
+              <textarea name="order-user-comment" id="order-user-comment" placeholder="Wprowadź tekst"></textarea>
             </li>
           </ul>
         </form>
