--- a/index.html
+++ b/index.html
@@ -441,18 +441,21 @@
         <!-- możemy tutaj ustawić również  -->
         <!-- novalidate - ten formularz nie będzie wówczas walidowany  -->
         <!-- autocomplete="off" przeglądarka nie będzie podpowiadała nam jaką wartość możemy wstawić np email który stosowaliśmy u siebie , zazwyczaj jednak nie ustawia się tego-->
-        <form name="newsletter-form" method="get">
-          <label class="subscribe-to-the-newsletter-label">
-            <input type="email" name="email-newsletter" placeholder="E-mail"
-              class="subscribe-to-the-newsletter-label-email" />
-            <button type="submit" class="subscribe-to-the-newsletter-label-save">
-              Zapisz się
-              <svg width="24" height="24" viewBox="0 0 24 24">
-                <use xlink:href="./images/icons.svg#icon-icon-send">
-                </use>
-              </svg>
-            </button>
-          </label>
+        <form method="get">
+          <ul class="subscribe-to-the-newsletter-form">
+            <li class="subscribe-to-the-newsletter-form-box">
+              <lable for="subscribe-to-the-newsletter"></lable>
+              <input type="email" name="email-newsletter" placeholder="E-mail"
+                class="subscribe-to-the-newsletter-form-box-email" id="subscribe-to-the-newsletter" />
+              <button type="submit" class="subscribe-to-the-newsletter-form-box-save" id="subscribe-to-the-newsletter">
+                Zapisz się
+                <svg class="newsletter-icon" width="24" height="24" viewBox="0 0 24 24">
+                  <use xlink:href="./images/icons.svg#icon-icon-send">
+                  </use>
+                </svg>
+              </button>
+            </li>
+          </ul>
         </form>
       </div>
       <!-- </div> zakmnięcie do <div class="footer-left">   -->
