--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 class="subscribe-to-the-newsletter-form-box-email" id="subscribe-to-the-newsletter" />
               <button type="submit" class="subscribe-to-the-newsletter-form-box-save" id="subscribe-to-the-newsletter">
                 Zapisz się
-                <svg class="newsletter-icon" width="24" height="24" viewBox="0 0 24 24">
+                <svg class="subscribe-to-the-newsletter-form-box-save-icon" width="24" height="24" viewBox="0 0 24 24">
                   <use xlink:href="./images/icons.svg#icon-icon-send">
                   </use>
                 </svg>
