--- a/index.html
+++ b/index.html
@@ -444,12 +444,12 @@
         <form method="get">
           <ul class="subscribe-to-the-newsletter-form">
             <li class="subscribe-to-the-newsletter-form-box">
-
+              <lable for="subscribe-to-the-newsletter"></lable>
               <input type="email" name="email-newsletter" placeholder="E-mail"
-                class="subscribe-to-the-newsletter-form-box-email" for="subscribe-to-the-newsletter" />
-              <button type="submit" class="subscribe-to-the-newsletter-form-box-save" id="subscribe-to-the-newsletter">
+                class="subscribe-to-the-newsletter-form-box-email" id="subscribe-to-the-newsletter" />
+              <button type="submit" class="subscribe-to-the-newsletter-form-box-save">
                 Zapisz się
-                <svg class="subscribe-to-the-newsletter-form-box-save-icon" width="24" height="24" viewBox="0 0 24 24">
+                <svg class="subscribe-to-the-newsletter-form-box-save" width="24" height="24" viewBox="0 0 24 24">
                   <use xlink:href="./images/icons.svg#icon-icon-send">
                   </use>
                 </svg>
