--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <form method="get">
           <ul class="subscribe-to-the-newsletter-form">
             <li class="subscribe-to-the-newsletter-form-box">
-              <lable for="subscribe-to-the-newsletter-form-box-lable"></lable>
+              <lable class="subscribe-to-the-newsletter-form-box-lable" for="subscribe-to-the-newsletter"></lable>
               <input type="email" name="email-newsletter" placeholder="E-mail"
                 class="subscribe-to-the-newsletter-form-box-email" id="subscribe-to-the-newsletter" />
               <button type="submit" class="subscribe-to-the-newsletter-form-box-save">
