--- a/index.html
+++ b/index.html
@@ -444,9 +444,10 @@
         <form method="get">
           <ul class="subscribe-to-the-newsletter-form">
             <li class="subscribe-to-the-newsletter-form-box">
-              <lable for="subscribe-to-the-newsletter"></lable>
-              <input type="email" name="email-newsletter" placeholder="E-mail"
-                class="subscribe-to-the-newsletter-form-box-email" id="subscribe-to-the-newsletter" />
+              <lable for="subscribe-to-the-newsletter">
+                <input type="email" name="email-newsletter" placeholder="E-mail" class="box-email"
+                  id="subscribe-to-the-newsletter" />
+              </lable>
               <button type="submit">
                 Zapisz się
                 <svg width="24" height="24" viewBox="0 0 24 24">
