--- a/index.html
+++ b/index.html
@@ -441,12 +441,11 @@
         <!-- możemy tutaj ustawić również  -->
         <!-- novalidate - ten formularz nie będzie wówczas walidowany  -->
         <!-- autocomplete="off" przeglądarka nie będzie podpowiadała nam jaką wartość możemy wstawić np email który stosowaliśmy u siebie , zazwyczaj jednak nie ustawia się tego-->
-        <form method="get">
-          <ul class="subscribe-to-the-newsletter-form">
-            <li class="subscribe-to-the-newsletter-form-box">
+        <form class="subscribe-to-the-newsletter-form" method="get">
+          <!-- <ul class="subscribe-to-the-newsletter-form">
+            <li class="subscribe-to-the-newsletter-form-box"> -->
               <lable for="subscribe-to-the-newsletter">
-                <input type="email" name="email-newsletter" placeholder="E-mail" class="box-email"
-                  id="subscribe-to-the-newsletter" />
+                <input type="email" name="email-newsletter" placeholder="E-mail" id="subscribe-to-the-newsletter" />
               </lable>
               <button type="submit">
                 Zapisz się
@@ -455,8 +454,8 @@
                   </use>
                 </svg>
               </button>
-            </li>
-          </ul>
+            <!-- </li>
+          </ul> -->
         </form>
       </div>
       <!-- </div> zakmnięcie do <div class="footer-left">   -->
