--- a/index.html
+++ b/index.html
@@ -444,17 +444,17 @@
         <form class="subscribe-to-the-newsletter-form" method="get">
           <!-- <ul class="subscribe-to-the-newsletter-form">
             <li class="subscribe-to-the-newsletter-form-box"> -->
-              <lable for="subscribe-to-the-newsletter">
-                <input type="email" name="email-newsletter" placeholder="E-mail" id="subscribe-to-the-newsletter" />
-              </lable>
-              <button type="submit">
-                Zapisz się
-                <svg width="24" height="24" viewBox="0 0 24 24">
-                  <use xlink:href="./images/icons.svg#icon-icon-send">
-                  </use>
-                </svg>
-              </button>
-            <!-- </li>
+          <lable for="subscribe-to-the-newsletter">
+            <input type="email" name="email-newsletter" placeholder="E-mail" />
+          </lable>
+          <button type="submit" id="subscribe-to-the-newsletter">
+            Zapisz się
+            <svg width="24" height="24" viewBox="0 0 24 24">
+              <use xlink:href="./images/icons.svg#icon-icon-send">
+              </use>
+            </svg>
+          </button>
+          <!-- </li>
           </ul> -->
         </form>
       </div>
