--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   </header>
 
   <main>
+    <!-- SLIDER -->
     <section class="slider">
       <div class="container">
         <div class="slider_header">
@@ -74,6 +75,9 @@
         </div>
       </div>
     </section>
+    <!-- END SLIDER -->
+
+    <!-- SECTION OUR ATTRIBUTES -->
     <section class="attributes">
       <div class="container">
         <div class="attributes_list">
@@ -130,6 +134,9 @@
         </div>
       </div>
     </section>
+    <!-- END SECTION OUR ATTRIBUTES -->
+
+    <!-- SECTION WHAT ARE WE DOING -->
     <section class="what_are_we_doing section">
       <div class="container">
         <h2 class="what_are_we_doing_title">Czym się zajmujemy</h2>
@@ -155,7 +162,9 @@
         </ul>
       </div>
     </section>
+    <!-- END WHAT ARE WE DOING -->
 
+    <!-- SECTION TEAM -->
     <section class="team section">
       <div class="container">
         <div class="our_team">
@@ -322,6 +331,9 @@
         </div>
       </div>
     </section>
+    <!-- END SECTION TEAM -->
+
+    <!-- SECTION OUR CLIENTS -->
     <section class="our_clients section">
       <div class="container">
         <h2>Nasi klienci</h2>
@@ -371,11 +383,11 @@
         </ul>
       </div>
     </section>
+    <!-- END SECTION OUR CLIENTS -->
   </main>
 
   <footer class="footer">
     <div class="container footer-left">
-      <!-- <div class="footer-left"> -->
       <div class="contact-box">
         <div class="logo">
           <h2>
@@ -458,7 +470,6 @@
           </ul>
         </form>
       </div>
-      <!-- </div> zakmnięcie do <div class="footer-left">   -->
     </div>
   </footer>
   <!-- modal ze zmianą script -->
@@ -472,7 +483,7 @@
   </div> -->
 
   <!-- modal bez zmiany script  -->
-  <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is_hidden" data-modal>
     <div class="backdrop-modal">
       <div class="backdrop-modal-close-btn">
         <svg width="18" height="18" viewBox="0 0 18 18" class="backdrop-modal-close-btn-icon" data-modal-close>
@@ -516,6 +527,17 @@
             <li class="backdrop-modal-order-box-items">
               <label for="order-user-comment">Komentarz</label>
               <textarea name="order-user-comment" id="order-user-comment" placeholder="Wprowadź tekst"></textarea>
+            </li>
+            <li class="backdrop-modal-order-agreement">
+              <div class="backdrop-modal-order-agreement-check">
+                <input type="checkbox" name="order-user-agreement" value="agreement" id="agreement" />
+                <svg class="order-icon" width="18" height="18" viewBox="0 0 18 18">
+                  <use xlink:href="./images/icons.svg#icon-email-black-18dp">
+                  </use>
+                </svg>
+
+              </div>
+
             </li>
           </ul>
         </form>
