--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
   </div> -->
 
   <!-- modal bez zmiany script  -->
-  <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is_hidden" data-modal>
     <div class="backdrop-modal">
       <div class="backdrop-modal-close-btn">
         <svg width="18" height="18" viewBox="0 0 18 18" class="backdrop-modal-close-btn-icon" data-modal-close>
