--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
   </div> -->
 
   <!-- modal bez zmiany script  -->
-  <div class="backdrop is_hidden" data-modal>
+  <div class="backdrop is-hidden" data-modal>
     <div class="backdrop-modal">
       <div class="backdrop-modal-close-btn">
         <svg width="18" height="18" viewBox="0 0 18 18" class="backdrop-modal-close-btn-icon" data-modal-close>
@@ -502,14 +502,12 @@
           <ul class="backdrop-modal-order-box">
             <li class="backdrop-modal-order-box-items">
               <label for="order-user-full-name">Imię</label>
-              <div class="backdrop-modal-order-box-items-input">
-                <input class="input-box" type="text" name="order-user-full-name" id="order-user-full-name" required
-                  minlength="3" maxlength="15">
-                <svg class="order-icon" width="18" height="18" viewBox="0 0 18 18">
-                  <use xlink:href="./images/icons.svg#icon-person-black-18dp">
-                  </use>
-                </svg>
-              </div>
+              <input class="input-box" type="text" name="order-user-full-name" id="order-user-full-name" required
+                minlength="3" maxlength="20">
+              <svg class="order-icon" width="18" height="18" viewBox="0 0 18 18">
+                <use xlink:href="./images/icons.svg#icon-person-black-18dp">
+                </use>
+              </svg>
             </li>
             <li class="backdrop-modal-order-box-items">
               <label for="order-user-phone">Telefon</label>
@@ -531,8 +529,8 @@
             </li>
             <li class="backdrop-modal-order-box-items">
               <label for="order-user-comment">Komentarz</label>
-              <textarea name="order-user-comment" id="order-user-comment" placeholder="Wprowadź tekst"
-                required></textarea>
+              <textarea class="textarea-box" name="order-user-comment" id="order-user-comment"
+                placeholder="Wprowadź tekst" required></textarea>
             </li>
             <li class="backdrop-modal-order-agreement">
               <div class="backdrop-modal-order-agreement-check">
