up footer portfolio

--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
           </div>
         </form>
       </div>
+      <!-- end newsletter -->
     </div>
   </footer>
   <!-- modal ze zmianą script -->
