--- a/portfolio.html
+++ b/portfolio.html
@@ -277,23 +277,24 @@
         <!-- możemy tutaj ustawić również  -->
         <!-- novalidate - ten formularz nie będzie wówczas walidowany  -->
         <!-- autocomplete="off" przeglądarka nie będzie podpowiadała nam jaką wartość możemy wstawić np email który stosowaliśmy u siebie , zazwyczaj jednak nie ustawia się tego-->
-        <form method="get">
-          <ul class="subscribe-to-the-newsletter-form">
-            <li class="subscribe-to-the-newsletter-form-box">
-              <label for="subscribe-to-the-newsletter"></label>
-              <input type="email" name="email-newsletter" placeholder="E-mail"
-                class="subscribe-to-the-newsletter-form-box-email" id="subscribe-to-the-newsletter" />
-              <button type="submit" class="subscribe-to-the-newsletter-form-box-save">
-                Zapisz się
-                <svg width="24" height="24" viewBox="0 0 24 24">
-                  <use xlink:href="./images/icons.svg#icon-icon-send">
-                  </use>
-                </svg>
-              </button>
-            </li>
-          </ul>
+        <form class="subscribe-to-the-newsletter-form" method="get">
+          <div class="subscribe-to-the-newsletter-form-box">
+            <label for="subscribe-to-the-newsletter">
+              <input type="email" name="newsletter-email" placeholder="E-mail"
+                class="subscribe-to-the-newsletter-form-box-email" id="subscribe-to-the-newsletter" required
+                pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" />
+            </label>
+            <button type="submit" class="subscribe-to-the-newsletter-form-box-save">
+              Zapisz się
+              <svg width="24" height="24" viewBox="0 0 24 24">
+                <use xlink:href="./images/icons.svg#icon-icon-send">
+                </use>
+              </svg>
+            </button>
+          </div>
         </form>
       </div>
+      <!-- end newsletter -->
     </div>
   </footer>
 </body>
